Remove old QueryStatusReportListener.subQueriesCreated